<resources>

    <string name="app_name">Store</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="enter_name">请输入用户名</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="select_goods">选择商品</string>
    <string name="menu">菜单</string>
    <string name="order">已点</string>
    <string name="preorder">预约</string>
    <string name="pic">图片</string>
    <string name="test">测试内容</string>
    <string name="no">1</string>

</resources>