<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bgall"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/account_txt"
        android:layout_width="200dip"
        android:layout_height="30dip"
        android:layout_marginTop="130dip"
        android:background="@drawable/edit_bg"
        android:hint="@string/username"
        android:paddingLeft="10dip"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="200dip"
        android:layout_height="30dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/edit_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dip"
        android:scrollHorizontally="true"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dip"
        android:layout_height="30dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_login_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>