<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dip"
    android:background="@drawable/footer"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/foot_menu_ly"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/footer_style" >

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pic"
            android:paddingTop="8dip"
            android:src="@drawable/menu_bn_style" />

        <TextView
            android:id="@+id/menu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dip"
            android:text="@string/menu"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/foot_order_ly"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/footer_style" >

        <ImageView
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pic"
            android:paddingTop="8dip"
            android:src="@drawable/order_bn_style" />

        <TextView
            android:id="@+id/order_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dip"
            android:text="@string/order"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/foot_preorder_ly"
        android:layout_width="0dip"
        android:layout_height="50dip"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/footer_style" >

        <ImageView
            android:id="@+id/preorder_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/pic"
            android:paddingTop="8dip"
            android:src="@drawable/preorder_bn_style" />

        <TextView
            android:id="@+id/preorder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dip"
            android:text="@string/preorder"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>